# ralphterm

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  site.webmanifest  sitemap.xml
.github/workflows/: ci.yml  pages.yml  release.yml
Formula/: ralphterm.rb
assets/: styles.css
dashboard/: app.js  index.html  styles.css
docker/: Dockerfile  entrypoint.sh
docs/: api.md  architecture.html  architecture.md  cli-reference.md  docker.md  getting-started.md  index.html  migrate-from-ralphex.md  milestone-one.html  notifications.md  product.md  providers.md  ralphex-compat.md  security.html  security.md  workflows.md
docs/milestones/: m1-autonomous-engineering.md
docs/plans/: 2026-05-15-pty-multiplexor.md  2026-05-16-m1-plan-execution.md  2026-05-17-ralphex-drop-in.md  example.md
docs/research/: ralphex-cross-review.md
docs/superpowers/plans/: 2026-05-17-crates-io-and-install.md  2026-05-17-ralphex-execution-model-rewrite.md  2026-05-17-website-redesign.md
docs/superpowers/specs/: 2026-05-17-crates-io-and-install-design.md  2026-05-17-ralphex-execution-model-rewrite-design.md  2026-05-17-website-redesign-design.md
scripts/: diff-against-ralphex.sh
scripts/wrappers/: codex.sh  copilot.sh  gemini.sh  opencode.sh
site/: CNAME  index.html  install.ps1  install.sh  robots.txt  site.webmanifest  sitemap.xml
site/assets/: copy.js  fonts.css  styles.css
site/docs/: api.html  architecture.html  cli.html  docker.html  index.html  migrate-from-ralphex.html  milestone-one.html  notifications.html  providers.html  ralphex-compat.html  security.html  workflows.html
src/: agent_driver.rs  cli.rs  color.rs  config.rs  docker.rs  lib.rs  main.rs  notify.rs  output_format.rs  plan.rs  preflight.rs  progress_log.rs  prompts.rs  pty_agent.rs  review_phases.rs  runner.rs  runs.rs  signals.rs  spinner.rs  store.rs  workspace.rs
tests/: cli_flag_compat.rs  config_compat.rs  docker_compat.rs  docs_links.rs  install_script.rs  mode_compat.rs  notify_compat.rs  plan_completion_compat.rs  plan_parser.rs  progress_compat.rs  ralphex_alias.rs  run_api.rs  run_plan_fake_agent.rs  signals_compat.rs  site_copy.rs  workspace.rs  worktree_compat.rs  wrappers_compat.rs
tests/fixtures/: env-capture-agent.sh  external-loop-agent.sh  failing-agent.sh  fake-agent-no-completed.sh  fake-agent-review-pass-noise.sh  fake-agent.sh  hanging-agent.sh  large-output-agent.sh  retry-after-review-agent.sh  retry-cleanup-mutator-agent.sh  review-echo-prompt.sh  review-fail-once.sh  review-fail-twice.sh  review-fail-with-reason.sh  review-fail.sh  review-pass-after-mutation.sh  review-pass-creates-validation-file.sh  review-pass.sh  review-ralphex-pass.sh  review-silent.sh  slow-fake-agent.sh  slow-two-task-agent.sh  staging-agent.sh
